--- a/src/App.css
+++ b/src/App.css
@@ -1,72 +1,46 @@
-html {
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .app {
-  position: relative;
-  display: flex;
   background-color: #282c34;
   color: white;
-  height: 100vh;
 }
 
 .aside {
-  position: sticky;
-  flex: 1 0 100%;
-  max-width: 26rem;
-  padding: 1.5rem;
-  overflow-y: auto;
+  display: none;
+}
+
+.build-panel {
+  padding: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .app {
+    display: flex;
+    height: 100vh;
+  }
+
+  .aside {
+    display: block;
+    position: sticky;
+    flex: 1 0 100%;
+    max-width: 14rem;
+    padding: 1rem;
+    overflow-y: auto;
+  }
+
+  .main {
+    flex: 1 1 auto;
+    padding: 1rem;
+    overflow-y: auto;
+  }
+
+  .build-panel {
+    overflow-y: auto;
+    flex: 1 0 100%;
+    max-width: 24rem;
+  }
 }
 
 .aside-total {
   margin: 0 0 1.5rem;
-}
-
-.main {
-  padding: 1.5rem;
-  overflow-y: scroll;
-}
-
-.item-details {
-  overflow-y: auto;
-  flex: 1 0 100%;
-  max-width: 24rem;
-  padding: 1.5rem;
-  background: #0c0c0c;
-}
-
-.filter-bar-title {
-  margin: 0 0 1.5rem;
-}
-
-.filters {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
-
-.filter {
-  padding: 0.375rem 0.5rem;
-  border: none;
-  border-radius: 4px;
-  color: #222;
 }
 
 .cards {
@@ -116,7 +90,6 @@ body {
 
 .inventory-item {
   padding: 2px;
-  background: #0c0c0c;
   border-radius: 4px;
   cursor: pointer;
   user-select: none;
