--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,3 +34,17 @@ p {
 h2 {
   margin-bottom: 1.5rem;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7777;
+  border-radius: 4px;
+}
