--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -1,3 +1,7 @@
+.items {
+  padding: 1rem;
+}
+
 .items-top {
   display: flex;
   justify-content: space-between;
@@ -14,55 +18,14 @@
   flex-wrap: wrap;
 }
 
-.card-wrap {
+.items-full-cell {
   padding: 0.5rem;
   width: 50%;
 }
 
 @media screen and (min-width: 768px) {
-  .card-wrap {
+  .items-full-cell {
     padding: 0.5rem;
     width: 20%;
   }
-}
-
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  padding: 0.5rem;
-  background: #0c0c0c;
-}
-
-.card-title {
-  margin: 1rem 0;
-  text-align: center;
-}
-
-.card-params {
-  margin-bottom: 1rem;
-}
-
-.card-skills {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 100;
-  display: none;
-  width: 24rem;
-  height: 100vh;
-  padding: 1rem;
-  background-color: #282c34;
-}
-
-.card-skills-title {
-  margin-top: auto;
-  color: #cdc2a4;
-  text-align: center;
-  cursor: pointer;
-}
-
-.card-skills-title:hover + .card-skills {
-  display: block;
 }
