--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 1.5rem;
 }
 
 .items-thumbnails {
@@ -17,16 +18,15 @@
 .items-full {
   display: flex;
   flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .items-full-cell {
-  padding: 0.5rem;
-  width: 50%;
+  width: calc(50% - 0.5rem);
 }
 
 @media screen and (min-width: 768px) {
   .items-full-cell {
-    padding: 0.5rem;
-    width: 20%;
+    width: calc(20% - 0.8rem);
   }
 }
