--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@
   padding: 1rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
   .app {
     display: flex;
     height: 100vh;
@@ -32,7 +32,7 @@
 
   .main {
     flex: 1 1 auto;
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 
   .build-panel {
