--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
 .app {
   background-color: #282c34;
   color: white;
+  padding-top: 40px;
 }
 
 .aside {
@@ -11,14 +12,20 @@
   overflow-x: hidden;
 }
 
-.build-panel {
-  padding: 1rem;
+.app-toolbar {
+  position: fixed;
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  z-index: 1000;
 }
 
 @media screen and (min-width: 769px) {
   .app {
     display: flex;
     height: 100vh;
+    padding-top: 0;
   }
 
   .aside {
