--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -12,7 +12,7 @@
 .items-thumbnails {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.625rem;
+  gap: 0.375rem;
 }
 
 .items-full {
@@ -26,6 +26,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .items-thumbnails {
+    gap: 0.625rem;
+  }
+
+
   .items-full-cell {
     width: calc(20% - 0.8rem);
   }
