--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  background-color: #282c34;
+  color: white;
 }
 
 code {
@@ -48,6 +50,12 @@ img {
 ::-webkit-scrollbar-thumb {
   background-color: #7777;
   border-radius: 4px;
+}
+
+.container {
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .title {
