--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -1,10 +1,27 @@
 .panel {
   position: fixed;
-  top: 40px;
+  top: 0;
+  bottom: 40px;
   left: 0;
   z-index: 990;
   width: 100%;
-  height: 100vh;
   overflow-y: auto;
   background-color: #282c34;
+}
+
+.panel-close {
+  position: absolute;
+  z-index: 980;
+  right: 1rem;
+  top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0;
+  color: white;
+  background-color: transparent;
+  border: none;
+  font-size: 1.5rem;
 }
