--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 .app {
-  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .aside {
@@ -12,7 +12,7 @@
 
 .app-toolbar {
   position: fixed;
-  top: 0;
+  bottom: 0;
   display: flex;
   width: 100%;
   height: 40px;
