--- a/src/components/Filters/Filters.css
+++ b/src/components/Filters/Filters.css
@@ -2,6 +2,16 @@
   padding: 1rem;
 }
 
+.filters-title {
+  display: flex;
+  gap: 0.5rem;
+  align-items: baseline;
+}
+
+.filters-clear {
+  font-size: 1rem;
+}
+
 .filters-group + .filters-group {
   margin-top: 1.5rem;
 }
