--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,8 @@
 .app {
+  overflow-y: scroll;
+}
+
+.app-grid {
   padding-bottom: 40px;
 }
 
@@ -25,8 +29,16 @@
 
 @media screen and (min-width: 769px) {
   .app {
+    overflow: hidden;
+  }
+
+  .app-container {
+    height: 100%;
+  }
+
+  .app-grid {
     display: flex;
-    height: 100vh;
+    height: 100%;
     padding-bottom: 0;
   }
 
