--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,11 +1,13 @@
 .navigation {
-  padding: 1rem;
+  padding: 0 1rem;
   overflow-x: auto;
 }
 
 .navigation-list {
   display: flex;
+  align-items: center;
   gap: 1rem;
+  height: 50px;
   margin: 0;
   padding: 0;
   list-style-type: none;
