--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,20 +36,6 @@ img {
   max-width: 100%;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #7777;
-  border-radius: 4px;
-}
-
 .container {
   max-width: 1920px;
   margin-left: auto;
@@ -92,4 +78,20 @@ img {
 
 .icon-btn:hover {
   color: #be9057;
+}
+
+@media screen and (min-width: 769px) {
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #7777;
+    border-radius: 4px;
+  }
 }
